objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Director</fullName>
        <description>used by Regional Directors to update a stage to Deferred or Closed or Lost</description>
        <isActive>false</isActive>
        <values>
            <fullName>Closed or Lost</fullName>
        </values>
        <values>
            <fullName>Closed or Won</fullName>
        </values>
        <values>
            <fullName>Deferred Opportunity</fullName>
        </values>
        <values>
            <fullName>GM%2FDP Webex needed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Installments Approved</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Completed</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Requested</fullName>
        </values>
        <values>
            <fullName>Pending Installment Approval</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Second WX Complete</fullName>
        </values>
        <values>
            <fullName>Third WX</fullName>
        </values>
        <values>
            <fullName>Webex Complete</fullName>
        </values>
        <values>
            <fullName>second Webex set</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Haystak</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Closed or Lost</fullName>
        </values>
        <values>
            <fullName>Deferred Opportunity</fullName>
        </values>
        <values>
            <fullName>Demo Complete</fullName>
        </values>
        <values>
            <fullName>Pending Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Reschedule Demo</fullName>
        </values>
        <values>
            <fullName>Webex Complete</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Regional Sales</fullName>
        <description>used by Regionals/Regional Assistants/Territory Managers</description>
        <isActive>false</isActive>
        <values>
            <fullName>Closed or Won</fullName>
        </values>
        <values>
            <fullName>GM%2FDP Webex needed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Completed</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Requested</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Second WX Complete</fullName>
        </values>
        <values>
            <fullName>Third WX</fullName>
        </values>
        <values>
            <fullName>Webex Complete</fullName>
        </values>
        <values>
            <fullName>second Webex set</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vin</fullName>
        <description>used by Regionals/Regional Assistants/Territory Managers</description>
        <isActive>false</isActive>
        <values>
            <fullName>Demo Complete</fullName>
        </values>
        <values>
            <fullName>GM%2FDP Webex needed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Completed</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Requested</fullName>
        </values>
        <values>
            <fullName>Pending Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Second WX Complete</fullName>
        </values>
        <values>
            <fullName>Third WX</fullName>
        </values>
        <values>
            <fullName>second Webex set</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vin2</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Demo Complete</fullName>
        </values>
        <values>
            <fullName>GM%2FDP Webex needed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Completed</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Requested</fullName>
        </values>
        <values>
            <fullName>Pending Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Second WX Complete</fullName>
        </values>
        <values>
            <fullName>Third WX</fullName>
        </values>
        <values>
            <fullName>second Webex set</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vin3</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Deferred Opportunity</fullName>
        </values>
        <values>
            <fullName>Demo Complete</fullName>
        </values>
        <values>
            <fullName>GM%2FDP Webex needed</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Completed</fullName>
        </values>
        <values>
            <fullName>Onsite Visit Requested</fullName>
        </values>
        <values>
            <fullName>Pending Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Second WX Complete</fullName>
        </values>
        <values>
            <fullName>Third WX</fullName>
        </values>
        <values>
            <fullName>second Webex set</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vAuto</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Closed or Lost</fullName>
        </values>
        <values>
            <fullName>Deferred Opportunity</fullName>
        </values>
        <values>
            <fullName>Demo Complete</fullName>
        </values>
        <values>
            <fullName>Demo Set</fullName>
        </values>
        <values>
            <fullName>Pending Won</fullName>
        </values>
        <values>
            <fullName>Pre-sale</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ATC_District__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>ATC District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Division__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>ATC Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Region__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>ATC Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Reported_Competitive_Product__c</fullName>
        <description>Used by ATC Lead Generation email service.</description>
        <inlineHelpText>Used by ATC Lead Generation email service.</inlineHelpText>
        <label>ATC Reported Competitive Product</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DMS__c</fullName>
        <description>Used by Vin Sales</description>
        <formula>TEXT(Account.DMS_Type__c) &amp;&quot;-&quot;&amp;
TEXT( Account.DMS_System__c) &amp;
IF( 
   !ISBLANK(Account.DMS_Package_Level__c),
   &quot; - &quot; &amp; Account.DMS_Package_Level__c,
   &quot;&quot;
)</formula>
        <inlineHelpText>Pulls the DMS Type and DMS Package Level (if filled in) from the Account.</inlineHelpText>
        <label>Account DMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Deposit__c</fullName>
        <inlineHelpText>default set to Yes, please update to No if the deposit is being waived</inlineHelpText>
        <label>Add Deposit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_Promotional_Credit__c</fullName>
        <label>Add Promotional Credit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account.BillingStreet + Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>special field created for a request from AutoTrader - combines the billing street and city into one field</inlineHelpText>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Consultant__c</fullName>
        <label>Advertising Consultant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Email__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>Affiliate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Affiliate_Name__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>Affiliate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Phone__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>Affiliate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>For Leads submitted through Email-to-Lead services</inlineHelpText>
        <label>Affiliate</label>
        <picklist>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genius Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homenet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manheim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NextGear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xtime</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( ISNULL(DATEVALUE(CreatedDate)), NULL, Today()- DATEVALUE(CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount2__c</fullName>
        <formula>Amount  -  Monthly_Recurring_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Converted__c</fullName>
        <formula>IF(
   Price_Book_Used__c = &quot;Vin Canada&quot;,
   Amount * CAD_Conversion_Rate__c,
   Amount
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use for reporting that contains both CAD and USD opps.</inlineHelpText>
        <label>Amount (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <inlineHelpText>updated by the approval process workflow</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Group_Start_Date__c</fullName>
        <formula>IF( ISPICKVAL(  Account.Parent.Type , &quot;Auto Group Parent Account&quot;),  Account.Parent.Created_Date__c , null )</formula>
        <label>Auto Group Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Group__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this automatically updates from the Parent Account field on the Account, if this deal is part of an auto group, please update the parent account field on the rooftop to reflect the auto group</inlineHelpText>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autofollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autofollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autounfollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autounfollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Regional_Rating__c</fullName>
        <label>Average Regional Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Webexer_Rating__c</fullName>
        <label>Average Product Consultant Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Prefix__c</fullName>
        <formula>CASE( Business_Unit__c , 
&quot;VinSolutions&quot;, &quot;VIN&quot;,
&quot;vAuto&quot;, &quot;VAT&quot;,
&quot;Haystak&quot;, &quot;HAY&quot;,
&quot;Undefined, Log change request&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that sets the Business Unit prefix for naming of records with workflow</inlineHelpText>
        <label>BU Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Info__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email_Address__c</fullName>
        <description>Email address of the Billing Contact associated with this opportunity</description>
        <inlineHelpText>Email address of the Billing Contact associated with this opportunity</inlineHelpText>
        <label>Billing Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Billing Contact)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>CR-00015742</description>
        <formula>Account.BillingCountry</formula>
        <inlineHelpText>formula field that reads the Billing Country from the related Account record</inlineHelpText>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Form_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by Tinderbox forms when the customer submits a billing form through Tinderbox. Used by workflow to kick off notifications of payment made.</description>
        <label>Billing Form Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>CASE(
   RecordType.DeveloperName,
   &quot;General_Sales&quot;, &quot;VinSolutions&quot;,
   &quot;Directors&quot;, &quot;VinSolutions&quot;,
   &quot;Fulfillment&quot;, &quot;VinSolutions&quot;,
   &quot;Tier_1_Tier_2&quot;, &quot;VinSolutions&quot;,
   &quot;Digital_Marketing&quot;, &quot;Haystak&quot;,
   &quot;vAuto&quot;, &quot;vAuto&quot;,
   &quot;vAuto_Conquest&quot;, &quot;vAuto&quot;,
   &quot;vAuto&quot;, &quot;vAuto&quot;,
   &quot;NOT DEFINED - SEE ADMIN&quot;
)</formula>
        <inlineHelpText>Which Business Unit is responsible for this record. Based on Opp Record Type.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyout_Amount__c</fullName>
        <label>Buyout Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyout_Term__c</fullName>
        <label>Buyout Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buyout_Vendor__c</fullName>
        <label>Buyout Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoConX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAD_Conversion_Rate__c</fullName>
        <defaultValue>0.69</defaultValue>
        <inlineHelpText>The rate at which products sold in other currencies will be converted to USD for reporting.</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_User_Count__c</fullName>
        <inlineHelpText>The amount of users that are using our CRM in the dealership so that Training can send the appropriate amount of trainers</inlineHelpText>
        <label>CRM User Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Vendor__c</fullName>
        <inlineHelpText>Who is the Dealer&apos;s Current CRM Vendor?</inlineHelpText>
        <label>CRM Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoConX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <inlineHelpText>enter the date the Dealer is expecting the mail piece to be in homes</inlineHelpText>
        <label>In Home Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <inlineHelpText>enter the type of campaign - Vehicle Buyback, etc</inlineHelpText>
        <label>Campaign Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notes__c</fullName>
        <label>Lost Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Opportunity__c</fullName>
        <description>checks to see if the Parent Cloned ID is the same as the opp ID</description>
        <formula>IF( Parent_Clone_ID__c  !=  Id , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cloned Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_with_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned with Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <formula>MONTH( CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Details__c</fullName>
        <inlineHelpText>required when deal updated to closed lost</inlineHelpText>
        <label>Closed Lost Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>